# AutoMangaKindleUpdater

./: .gitignore  .gitmodules  Pipfile  README.md  main.py  pyproject.toml
AutoMangaKindleUpdater/: convert.py
manga_search/: download.py  email.py  manga_search.py
startup/: file_creation.py
util/: colors.py  file_creation.py  parse_json.py  print_log.py
